# Overlord

./: .gitignore  LICENSE  README.md  index.html  launch.ps1  package-lock.json  package.json
.agents/: AGENTS.md  Regresiones overlord.md
.agents/skills/overlord-audit-delegate/: SKILL.md
.github/workflows/: ci.yml
src/: App.vue  main.ts
src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  powershell.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: 01_perifericos.ps1  02_debloat.ps1  03_red.ps1  04_rendimiento.ps1  05_gpu_display.ps1  06_irq_affinity.ps1  07_almacenamiento.ps1  08_telemetria.ps1  09_energia.ps1  10_revertir.ps1  11_game_hooks.ps1  12_defender_exclusions.ps1  backup_manager.psm1  crear_respaldo.ps1  disable_mitigations.ps1  game_locator.psm1  get_modules_status.ps1  get_qol.ps1  manage_priority_service.ps1  quick_actions.ps1  set_qol.ps1  shutdown.ps1  sid_resolver.ps1  utils.ps1
src-tauri/src/: executor.rs  games.rs  hardware.rs  lib.rs  main.rs  memory.rs
src-tauri/tests/: modules.tests.ps1
src/components/: BenchmarkPanel.vue  HardwareSidebar.vue  ModuleCard.vue  OptimizationGrid.vue  ProfileSelector.vue  QolPanel.vue  QuickActions.vue  SafetyHub.vue  WarningModal.vue
src/composables/: useBenchmark.ts  useOptimizer.ts  useOrchestrator.ts
src/data/: tweaksMetadata.ts
src/stores/: overlordStore.ts  profileLogic.ts
src/utils/: styleHelpers.ts  swalConfig.ts
