[package]
name = "overlord"
version = "4.5.0"
description = "A Tauri App for Advanced OS Optimization"
authors = ["lordforcuadd"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "overlord_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
sysinfo = "0.30"
tauri-plugin-log = "2"
winreg = "0.52"
tokio = { version = "1", features = ["full"] }
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation"] }

[profile.release]
panic = "abort"      # Quita el unwinding de errores (ahorra espacio)
codegen-units = 1    # Compilación más lenta, pero más optimizada
lto = true           # Link Time Optimization (crucial para binarios pequeños)
opt-level = "s"      # Optimiza para tamaño ('z' o 's')
strip = true         # Elimina los símbolos de debug de C++ y Rust

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

